// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow load custom resources md2html with metadata: filelist 1`] = `
"[
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Allow load custom resources md2html with metadata: index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;description&quot;:&quot;&quot;,&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;test-yfm&quot;,&quot;content&quot;:&quot;inline test&quot;},{&quot;name&quot;:&quot;yfm-config&quot;,&quot;content&quot;:&quot;config test&quot;}],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;links&quot;:[{&quot;title&quot;:&quot;Getting started with Documentation&quot;,&quot;description&quot;:&quot;This guide will show you the basics of working with Documentation&quot;,&quot;href&quot;:&quot;page.html&quot;}]},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;test-yfm&quot;,&quot;content&quot;:&quot;inline test&quot;},{&quot;name&quot;:&quot;yfm-config&quot;,&quot;content&quot;:&quot;config test&quot;}],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;title&quot;:&quot;Documentation&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;index&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with metadata: page.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="yfm"
          value="builder in page"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;test-yfm&quot;,&quot;content&quot;:&quot;inline test&quot;},{&quot;name&quot;:&quot;yfm-config&quot;,&quot;content&quot;:&quot;config test&quot;},{&quot;name&quot;:&quot;yfm&quot;,&quot;value&quot;:&quot;builder in page&quot;}]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;/p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;page&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with metadata: project/config.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="yfm"
          value="builder in config"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;test-yfm&quot;,&quot;content&quot;:&quot;inline test&quot;},{&quot;name&quot;:&quot;yfm-config&quot;,&quot;content&quot;:&quot;config test&quot;},{&quot;name&quot;:&quot;yfm&quot;,&quot;value&quot;:&quot;builder in config&quot;}]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;/p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;project/config&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;ru&quot;,&quot;langs&quot;:[&quot;ru&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with metadata: toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Allow load custom resources md2md with metadata: filelist 1`] = `
"[
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources md2md with metadata: index.yaml 1`] = `
"title: Documentation
description: ''
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
    - name: test-yfm
      content: inline test
    - name: yfm-config
      content: config test
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources md2md with metadata: page.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    content: builder in page
---

Lorem"
`;

exports[`Allow load custom resources md2md with metadata: project/config.md 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    value: builder in config
---

Lorem"
`;

exports[`Allow load custom resources md2md with metadata: toc.yaml 1`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
"
`;
